# trimmothy

./: BUILD_APP.md  README.md  Trimmothy.spec  build_app.py  build_macos_app.sh  install_and_run.sh  pyproject.toml  run_poetry.sh  run_trimmothy.py
src/trimmothy/: __init__.py  main.py  utils.py  video_processor.py
